--- a/static/css/main.css
+++ b/static/css/main.css
@@ -384,6 +384,7 @@ header {
   }
 
   .mobile-logout {
+    display: block;
     margin-top: 1.5rem;
     border-top: 1px solid var(--border-color);
     padding-top: 1rem;
